// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile should show error when fetching interest suggestions failed 1`] = `
<main
  className="sc-dxgOiQ bniPMP"
>
  <h1
    className="sc-jzJRlG ljqmFj"
  >
    CompLeap
  </h1>
  <div>
    error
  </div>
</main>
`;

exports[`Profile should show interest suggestions when fetched successfully 1`] = `
<main
  className="sc-fjdhpX fLefgL"
>
  <h1
    className="sc-htoDjs bUUthU"
  >
    CompLeap
  </h1>
  <section>
    <h2
      className="sc-dnqmqq dJhZss"
    >
      Kiinnostukset
    </h2>
    <p>
      Valitse mahdollisimman tarkasti mitkä allaolevista asioista sinua kiinnostavat. Mitä tarkemmin valitset, sitä tarkemmin pystymme etsimään sinulle sopivia koulutuksia.
    </p>
    <h3
      className="sc-iwsKbI dKNzWp"
    >
      Valitse seuraavista ainakin 5 sinua kiinnostavaa asiaa
    </h3>
    <ul
      className="sc-jTzLTM cdDMBq"
    >
      <li>
        <button
          className="sc-gZMcBi iCPkan"
          onClick={[Function]}
          selected={true}
          value="Autot"
        >
          Autot
        </button>
        <ul
          className="sc-gqjmRU cYtBzF"
        >
          <li
            className="sc-VigVT hLPYRt"
          >
            <button
              className="sc-gZMcBi gNAzTL"
              onClick={[Function]}
              selected={false}
              value="Virittely ja korjaaminen"
            >
              Virittely ja korjaaminen
            </button>
          </li>
        </ul>
      </li>
    </ul>
  </section>
</main>
`;

exports[`Profile should show loading indicator when fetching interest suggestions 1`] = `
<main
  className="sc-gzVnrw jrCamq"
>
  <h1
    className="sc-bdVaJa gqrJlT"
  >
    CompLeap
  </h1>
  <div>
    loading
  </div>
</main>
`;
